--- a/draft_01_main.html
+++ b/draft_01_main.html
@@ -52,7 +52,7 @@
             <div class="content-header-event last">
                 <div class="right last" onclick="">
                     <span>Kiev, Ukraine</span>
-                    <img src="images/cross.png">
+                    <img src="images/arrow.png">
                 </div>
             </div>
         </div>
