--- a/from-quests.html
+++ b/from-quests.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8"/>
     <title>Event Page</title>
     <link type="text/css"
-          href="styles/jquery-ui-1.8.23.custom.css"
+          href="styles/jquery-ui-1.8.24.custom.css"
           rel="stylesheet">
     <script src="js/jquery-1.8.0.min.js"
             type="text/javascript"></script>
-    <script src="js/jquery-ui-1.8.23.custom.min.js"
+    <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
     <script src="js/from-quest.js"
             type="text/javascript">
@@ -48,7 +48,7 @@
 
 
             <div>
-                <div class="usual quest-form-contact-list shadow-border">
+                <div id="to-invite" class="usual quest-form-contact-list shadow-border">
                     <div class="quest-form-list-item usual q-second">
                         <img class="usual"
                              src="userimages/avatar-0001.png">
@@ -113,7 +113,7 @@
                         <div id="user8-status" class="usual form-user-invite-block"><span
                                 class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
                     </div>
-                    <div class="quest-form-list-item usual">
+                    <div class="quest-form-list-item usual q-second">
                         <img class="usual"
                              src="userimages/avatar-0001.png">
 
@@ -129,7 +129,7 @@
                         <div id="user10-status" class="usual form-user-invite-block"><span
                                 class="form-user-invite-button">ПРИГЛАСИТЬ</span></div>
                     </div>
-                    <div class="quest-form-list-item usual">
+                    <div class="quest-form-list-item usual q-second">
                         <img class="usual"
                              src="userimages/avatar-0001.png">
 
