--- a/event_create.html
+++ b/event_create.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8"/>
     <title>Event Page</title>
     <link type="text/css"
-          href="styles/jquery-ui-1.8.23.custom.css"
+          href="styles/jquery-ui-1.8.24.custom.css"
           rel="stylesheet">
     <script src="js/jquery-1.8.0.min.js"
             type="text/javascript"></script>
-    <script src="js/jquery-ui-1.8.23.custom.min.js"
+    <script src="js/jquery-ui-1.8.24.custom.min.js"
+            type="text/javascript"></script>
+    <script src="js/from-quest.js"
             type="text/javascript"></script>
     <link type="text/css"
           rel="stylesheet"
@@ -222,41 +224,5 @@
     </div>
 </div>
 </div>
-<script type="text/javascript">
-    $(function () {
-        $.datepicker.setDefaults(
-                $.extend($.datepicker.regional["ru"])
-        );
-        $("#datepickerStart").datepicker({
-            changeYear:true
-        });
-        $("a").click(function () {
-            $("#datepickerStart").datepicker(
-                    "dialog",
-                    "23.04.2009",
-
-                    { showButtonPanel:true },
-                    [300, 300]
-            );
-        });
-    });
-    $(function () {
-        $.datepicker.setDefaults(
-                $.extend($.datepicker.regional["ru"])
-        );
-        $("#datepickerEnd").datepicker({
-            changeYear:true
-        });
-        $("a").click(function () {
-            $("#datepickerEnd").datepicker(
-                    "dialog",
-                    "23.04.2009",
-
-                    { showButtonPanel:true },
-                    [300, 300]
-            );
-        });
-    });
-</script>
 </body>
 </html>
