--- a/maket.html
+++ b/maket.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <title>XXX</title>
     <link type="text/css"
-          href="styles/jquery-ui-1.8.23.custom.css"
+          href="styles/jquery-ui-1.8.24.custom.css"
           rel="stylesheet">
     <script src="js/jquery-1.8.0.min.js"
             type="text/javascript"></script>
-    <script src="js/jquery-ui-1.8.23.custom.min.js"
+    <!--<script src="js/jquery.ui.datepicker-ru.js"
+            type="text/javascript"></script>-->
+    <script src="js/jquery-ui-1.8.24.custom.min.js"
+            type="text/javascript"></script>
+    <script src="js/from-quest.js"
             type="text/javascript"></script>
     <link type="text/css"
           rel="stylesheet"
@@ -17,6 +21,7 @@
 </head>
 <body>
 <div class="page">
+<span id="now" hidden></span>
     <div class="header">
         <div class="page-header">
             <div class="logo">
@@ -48,7 +53,8 @@
         <div class="content-page">
             <div class="event-tab shadow-border">
                 <img src="images/food.png">
-
+                <span class="event-start-time" hidden>1341144005</span>
+                <span class="event-end-time"   hidden>1345144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
                 <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
@@ -61,7 +67,8 @@
             </div>
             <div class="event-tab shadow-border">
                 <img src="images/food.png">
-
+                <span class="event-start-time" hidden>1344144005</span>
+                <span class="event-end-time" hidden>2347144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
                 <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
@@ -74,7 +81,8 @@
             </div>
             <div class="event-tab shadow-border last-in-row">
                 <img src="images/food.png">
-
+                <span class="event-start-time" hidden>1342144005</span>
+                <span class="event-end-time" hidden>1348144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
                 <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
@@ -87,7 +95,8 @@
             </div>
             <div class="event-tab shadow-border">
                 <img src="images/food.png">
-
+                <span class="event-start-time" hidden>1345144005</span>
+                <span class="event-end-time" hidden>2345944005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
                 <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
@@ -100,7 +109,8 @@
             </div>
             <div class="event-tab shadow-border">
                 <img src="images/food.png">
-
+                <span class="event-start-time" hidden>1345144005</span>
+                <span class="event-end-time" hidden>2349144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
                 <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
@@ -113,7 +123,8 @@
             </div>
             <div class="event-tab shadow-border last-in-row">
                 <img src="images/food.png">
-
+                <span class="event-start-time" hidden>1345144005</span>
+                <span class="event-end-time" hidden>1345144005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
                 <div class="event-label"><span>Time to eat? is time to put some tasty things into stomach...</span>
@@ -125,7 +136,7 @@
                 <div class="event-cat entertainment"><span>Entertainment</span></div>
             </div>
 
-            <div class="draft-events-show-more full-wide shadow-border"><span>MORE</span>
+            <div class="draft-events-show-more full-wide shadow-border "><span>MORE</span>
 
             </div>
             <div style="height:1px;overflow:hidden;clear:both;"></div>
@@ -145,13 +156,12 @@
                 <!--<div class="filter-date"></div>
                <div class="filter-location"></div>
                <div class="filter-completed"></div>-->
-                <div class="filter-date"><img src="images/filterdate.png"><input id="datepicker"
-                                                                                 hidden><span id="startdate">начиная с сегодня </span><a href="#">(change)</a>
+                <span id="storedtime" hidden></span>
+                <div class="filter-date"><img src="images/filterdate.png"><span id="startdate">начиная с сегодня </span><a href="#">(change)</a>
                 </div>
-                <div class="filter-location"><img src="images/filterlocation.png"><input id="locationpicker"
-                                                                                         hidden><span id="location">Киев, Украина </span><a href="#">(change)</a>
+                <div class="filter-location"><img src="images/filterlocation.png"><span id="location">Киев, Украина </span><a href="">(change)</a>
                 </div>
-                <div class="filter-completed"><input type="checkbox"><span>отображать завершенные</span></div>
+                <div class="filter-completed"><input id="finished" type="checkbox" checked><span>отображать завершенные</span></div>
                 <div class="filter-tags"><img src="images/filtertags.png"><span>популярные теги:</span></div>
                 <div class="filter-loaded-tags">
                     <a href="/">tag,&nbsp;</a>
@@ -176,7 +186,9 @@
                     <a href="/">tag,&nbsp;</a>
                 </div>
             </div>
+
         </div>
+
     </div>
     <div class="footer">
         <div class="footer-menu">
