--- a/quests.html
+++ b/quests.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8"/>
     <title>Event Page</title>
     <link type="text/css"
-          href="styles/jquery-ui-1.8.23.custom.css"
+          href="styles/jquery-ui-1.8.24.custom.css"
           rel="stylesheet">
     <script src="js/jquery-1.8.0.min.js"
             type="text/javascript"></script>
-    <script src="js/jquery-ui-1.8.23.custom.min.js"
+    <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
-    <script src="js/quest.js"
+    <script src="js/from-quest.js"
             type="text/javascript">
     </script>
     <link type="text/css"
@@ -63,66 +63,66 @@
         <div class="usual quest-form-list">
             <div class="quest-form-list shadow-border usual">
 
-                <div class="quest-form-list-item usual q-second">
+                <div class="go quest-form-list-item usual q-second">
                     <img class="usual"
                          src="userimages/avatar-0001.png">
 
                     <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                    <div class="go usual quest-form-list-item-status"><span>идет</span></div>
+                    <div class="usual quest-form-list-item-status"><span>идет</span></div>
                     <img class="quest-form-list-item-cross"
                          src="images/cross.png">
                 </div>
-                <div class="quest-form-list-item  usual">
+                <div class="nogo quest-form-list-item  usual">
                     <img class="usual"
                          src="userimages/avatar-0001.png">
 
                     <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                    <div class="nogo usual quest-form-list-item-status"><span>не идет</span></div>
+                    <div class="usual quest-form-list-item-status"><span>не идет</span></div>
                     <img class="quest-form-list-item-cross"
                          src="images/cross.png">
                 </div>
-                <div class="quest-form-list-item usual q-second">
+                <div class="go quest-form-list-item usual q-second">
                     <img class="usual"
                          src="userimages/avatar-0001.png">
 
                     <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                    <div class="go usual quest-form-list-item-status"><span>идет</span></div>
+                    <div class="usual quest-form-list-item-status"><span>идет</span></div>
                     <img class="quest-form-list-item-cross"
                          src="images/cross.png">
                 </div>
-                <div class="quest-form-list-item usual">
+                <div class="nogo quest-form-list-item usual">
                     <img class="usual"
                          src="userimages/avatar-0001.png">
 
                     <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                    <div class="nogo usual quest-form-list-item-status"><span>не идет</span></div>
+                    <div class="usual quest-form-list-item-status"><span>не идет</span></div>
                     <img class="quest-form-list-item-cross"
                          src="images/cross.png">
                 </div>
-                <div class="quest-form-list-item usual q-second">
+                <div class="go quest-form-list-item usual q-second">
                     <img class="usual"
                          src="userimages/avatar-0001.png">
 
                     <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                    <div class="go usual quest-form-list-item-status"><span>идет</span></div>
+                    <div class="usual quest-form-list-item-status"><span>идет</span></div>
                     <img class="quest-form-list-item-cross"
                          src="images/cross.png">
                 </div>
-                <div class="quest-form-list-item usual">
+                <div class="noknow quest-form-list-item usual">
                     <img class="usual"
                          src="userimages/avatar-0001.png">
 
                     <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                    <div class="noknow usual quest-form-list-item-status"><span>не определился</span></div>
+                    <div class="usual quest-form-list-item-status"><span>не определился</span></div>
                     <img class="quest-form-list-item-cross"
                          src="images/cross.png">
                 </div>
-                <div class="quest-form-list-item usual q-second last">
+                <div class="noanswer quest-form-list-item usual q-second last">
                     <img class="usual"
                          src="userimages/avatar-0001.png">
 
                     <div class="usual quest-form-list-item-username"><span>Username</span></div>
-                    <div class="noanswer usual quest-form-list-item-status"><span>не ответил на приглашение</span></div>
+                    <div class="usual quest-form-list-item-status"><span>не ответил на приглашение</span></div>
                     <img class="quest-form-list-item-cross"
                          src="images/cross.png">
                 </div>
