Отработано по всем замечаниям, подробнее https://docs.google.com/document/d/1nO5lDCpzumCyF0MMX90zhBRDesEyjvd_p3hkaNNp_Bc/edit#

--- a/draft_05_calendar.html
+++ b/draft_05_calendar.html
@@ -23,7 +23,7 @@
     <div class="header">
         <div class="page-header">
             <div class="logo">
-                <a href="/"><img src="images/logo.png"></a>
+                <a href="/">Meet</a>
             </div>
             <div class="nav">
                 <div class="menu-active"><a class=""
@@ -37,8 +37,8 @@
                 <div class="border"></div>
                 <div><a href="/">Profile</a></div>
             </div>
-            <div class="login">
-                <a href="/"><img src="images/user-icon.png">Username</a>
+            <div id="username" class="login">
+                <a ><img src="images/user-icon.png">Username</a>
             </div>
         </div>
     </div>
@@ -74,7 +74,7 @@
                 <div class="search-input left">
                     <input placeholder="search"
                            type="text"
-                           class="search-text">
+                           class="search-text usual">
                     <input type="submit"
                            name="search"
                            class="search-submit"
@@ -132,7 +132,16 @@
 
             <div style="height:1px;overflow:hidden;clear:both;"></div>
         </div>
+        <div id="logged-menu" class="slide-menu user-menu">
 
+            <div class="">
+                <a>Настройки</a>
+            </div>
+            <div class="">
+                <a>Выход</a>
+            </div>
+
+        </div>
     </div>
     <div class="footer">
         <div class="footer-menu">
