--- a/quests.html
+++ b/quests.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<div class="content">
+<div id="quest" class="content">
     <div class="quest-form-header usual">
         <div class="quest-form-header-item usual">
             <span>Street Art Utopia</span>
@@ -31,7 +31,7 @@
         <div class="quest-form-header-item usual last">
             <a href="">пригласить</a>
         </div>
-        <img src="images/big-cross.png">
+        <div id="close-form"><img  src="images/big-cross.png"></div>
 
         <div style="height:1px;overflow:hidden;clear:both;"></div>
     </div>
