--- a/draft_01_main.html
+++ b/draft_01_main.html
@@ -10,6 +10,8 @@
             type="text/javascript"></script>
     <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
+    <script src="js/from-quest.js"
+            type="text/javascript"></script>
     <link type="text/css"
           rel="stylesheet"
           media="all"
@@ -20,7 +22,7 @@
     <div class="header">
         <div class="page-header">
             <div class="logo">
-                <a href="/"><img src="images/logo.png"></a>
+                <a href="/">Meet</a>
             </div>
             <!--<div class="nav">
                 <div><a class=""
@@ -30,14 +32,15 @@
 
             </div>-->
             <div class="login">
-                <a href="/">Sign Up</a>
-                |
-                <a href="/">Login In</a>
+                <div><a href="/">Sign Up</a></div>
+                <div class="border"></div>
+                <div><a id="login" >Login In</a></div>
             </div>
 
         </div>
     </div>
     <div class="content">
+
         <div class="content-pre-header">
             <div class="usual site-slogan">
                 <div class="usual site-slogan-text"><span>Share your events with anyone you want</span></div>
@@ -114,6 +117,22 @@
             </div>
             <div class="draft-events-show-more full-wide shadow-border"><span>More Events</span></div>
             <div style="height:1px;overflow:hidden;clear:both;"></div>
+        </div>
+        <div id="login-window" class="slide-menu">
+            <form>
+            <div>
+                <span>Username :</span>
+                <input type="text">
+            </div>
+            <div>
+                <span>Password (</span><a href="">Forgot?</a><span>):</span>
+                <input type="text">
+            </div>
+            <div>
+                <input type="checkbox"><span>Keep me logged in</span>
+                <input type="submit">
+            </div>
+            </form>
         </div>
     </div>
     <div class="footer">
