--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -10,17 +10,20 @@
             type="text/javascript"></script>
     <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
+    <script src="js/from-quest.js"
+            type="text/javascript"></script>
     <link type="text/css"
           rel="stylesheet"
           media="all"
           href="styles/main.css">
+
 </head>
 <body>
 <div class="page">
 <div class="header">
     <div class="page-header">
         <div class="logo">
-            <a href="/"><img src="images/logo.png"></a>
+            <a href="/">Meet</a>
         </div>
         <div class="nav">
             <div class="menu-active"><a class=""
@@ -34,8 +37,8 @@
             <div class="border"></div>
             <div><a href="/">Profile</a></div>
         </div>
-        <div class="login">
-            <a href="/"><img src="images/user-icon.png">Username</a>
+        <div id="username" class="login">
+            <a ><img src="images/user-icon.png">Username</a>
         </div>
 
     </div>
@@ -48,14 +51,14 @@
 <div class="content-page">
     <div class="wide">
         <div class="usual activity-events-list wide">
-            <div class="usual activity-period padding-bottom-30">
+            <div class="usual activity-period">
                 <div class="activity-period-first usual">
                     <span>За сегодня, 01 июня 2012</span>
                 </div>
-                <div class="search-input activity-search">
+                <div class="usual search-input activity-search">
                     <input placeholder="search"
                            type="text"
-                           class="search-text">
+                           class="usual search-text">
                     <input type="submit"
                            name="search"
                            class="search-submit"
@@ -63,8 +66,8 @@
                 </div>
             </div>
             <div class="usual margin-b5 shadow-border ">
-                <div class="activity-event-item">
-                    <img src="userimages/event-small0002.png">
+                <div class="activity-event-item usual">
+                    <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
                     <div class="usual activity-event-notification">
                         <span>Событие </span>
@@ -83,9 +86,9 @@
                         <span>всего 4 новых коментария</span><br>
                     </div>
                 </div>
-                <hr>
-                <div class="activity-event-item">
-                    <img src="userimages/event-small0002.png">
+                <div class="hr usual"></div>
+                <div class="activity-event-item usual">
+                    <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
                     <div class="usual activity-event-notification">
                         <span>Событие </span>
@@ -101,9 +104,9 @@
                         <span>всего 4 новых коментария</span><br>
                     </div>
                 </div>
-                <hr>
-                <div class="activity-event-item last">
-                    <img src="userimages/event-small0002.png">
+                <div class="hr usual"></div>
+                <div class="activity-event-item usual last">
+                    <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
                     <div class="usual activity-event-notification">
                         <span>Событие </span>
@@ -118,12 +121,14 @@
 
             </div>
             <div class="usual activity-period">
-                <span>За вчера, 01 июня 2012</span>
+                <div class="activity-period-first usual">
+                    <span>За вчера, 31 мая 2012</span>
+                </div>
             </div>
-            <hr>
+            <div class="hr usual"></div>
             <div class="usual margin-b5  shadow-border ">
-                <div class="activity-event-item">
-                    <img src="userimages/event-small0002.png">
+                <div class="activity-event-item usual">
+                    <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
                     <div class="usual activity-event-notification">
                         <span>Событие </span>
@@ -135,9 +140,9 @@
                         <span class="activity-event-time">17:31</span>
                     </div>
                 </div>
-                <hr>
-                <div class="activity-event-item">
-                    <img src="userimages/event-small0002.png">
+                <div class="hr usual"></div>
+                <div class="activity-event-item usual">
+                    <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
                     <div class="usual activity-event-notification">
                         <span>Событие </span>
@@ -147,10 +152,9 @@
                         <span class="activity-event-time">17:31</span>
                     </div>
                 </div>
-                <hr>
-                <div class="activity-event-item last">
-                    <img src="userimages/event-small0002.png">
-
+                <div class="hr usual"></div>
+                <div class="activity-event-item usual last">
+                    <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
                     <div class="usual activity-event-notification">
                         <span>Событие </span>
                         <a href=""
@@ -198,7 +202,7 @@
             <div class="user-event-time"><span>Today, 17:45</span></div>
         </div>
         <div class="user-event-item">
-            <img src="userimages/event-small0002.png">
+            <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
             <div class="user-event-title"><span>Abadoned Psyhiatric</span></div>
             <div class="user-event-time"><span>Today, 22:32</span></div>
@@ -222,7 +226,7 @@
          class="shadow-border">
         <div class="user-events-caption"><span>События из каталога</span></div>
         <div class="user-event-item">
-            <img src="userimages/event-small0002.png">
+            <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
             <div class="user-event-title"><span>Fotography by Oliver</span></div>
             <div class="user-event-time"><span>Today, 17:45</span></div>
@@ -240,7 +244,7 @@
             <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
         </div>
         <div class="user-event-item">
-            <img src="userimages/event-small0002.png">
+            <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
             <div class="user-event-title"><span>Stephen Baretss photo</span></div>
             <div class="user-event-time"><span>Apr 30 - May 03, 2012</span></div>
@@ -249,7 +253,16 @@
     </div>
     <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
 </div>
+<div id="logged-menu" class="slide-menu user-menu">
 
+    <div class="">
+        <a>Настройки</a>
+    </div>
+    <div class="">
+        <a>Выход</a>
+    </div>
+
+</div>
 </div>
 <div class="footer">
     <div class="footer-menu">
