--- a/event.html
+++ b/event.html
@@ -10,6 +10,8 @@
             type="text/javascript"></script>
     <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
+    <script src="js/from-quest.js"
+            type="text/javascript"></script>
     <link type="text/css"
           rel="stylesheet"
           media="all"
@@ -20,7 +22,7 @@
 <div class="header">
     <div class="page-header">
         <div class="logo">
-            <a href="/"><img src="images/logo.png"></a>
+            <a href="/">Meet</a>
         </div>
         <div class="nav">
             <div class="menu-active"><a class=""
@@ -34,8 +36,8 @@
             <div class="border"></div>
             <div><a href="/">Profile</a></div>
         </div>
-        <div class="login">
-            <a href="/"><img src="images/user-icon.png">Username</a>
+        <div id="username" class="login">
+            <a><img src="images/user-icon.png">Username</a>
         </div>
 
     </div>
@@ -55,11 +57,11 @@
             <span>Join event</span>
         </div>
     </div>
-    <div class="event-more-b2">
-        <div id="e-date">
+    <div class="event-more-b2 usual">
+        <div class="e-date">
             <img src="images/filterdate.png"><span>30 апр - Май 03,2012</span>
         </div>
-        <div id="e-location">
+        <div class="e-location">
             <img src="images/filterlocation.png"><span>Киев, Клуб "Бинго"</span>
         </div>
         <div class="e-category">
@@ -72,10 +74,12 @@
             <img src="images/people-icon.png"><span>4 идут/8 не определились</span>
         </div>
         <div class="event-invite">
-            <a href="/"><sup>+</sup>пригласить</a>
+            <a id="invite"><sup>+</sup>пригласить</a>
+            <span>|</span>
+            <a id="inspect">смотреть</a>
         </div>
     </div>
-    <div id="e-text"><span>Breaking Bad ( «Во все тяжкие» ), возможно, уже и не жилец в
+    <div id="e-text" class="usual"><span>Breaking Bad ( «Во все тяжкие» ), возможно, уже и не жилец в
                   этом телевизионном мире, однако у драмы AMC, по мере приближения к финалу, продолжает расти аудитория.
 
                   В это воскресенье сериал превзошел свои предыдущие рекорды, которые были поставлены,
@@ -93,99 +97,130 @@
         <a href=""><img src="images/vk.png"></a>
         <a href=""><img src="images/mail.png"></a>
     </div>
-    <div id="content-all-comments">
+    <div id="content-all-comments" class="usual">
         <div class="content-comments-header">
-            <a href="/"><h2>Коментарии(39)</h2></a>
+            <a href="/">Коментарии(39)</a>
+            <a class="comment-notification-link" href="/">получать уведомления</a>
         </div>
-        <ol id="content-comments-list">
-            <li id="comment-1">
-                <div class="">
-                    <img src="images/people-icon.png"
-                         class="ava-icon">
-                    <a href="">user</a>
-                    <span>13 апреля 2012,08:13</span>
-                </div>
-                <div class=""><span>Самая изысканная современная музыка - для тех, кто знает себе цену и готов получать от жизни еще больше.
+        <div class="shadow-border coment-list-wrapper">
+            <ol id="content-comments-list">
+                <li id="comment-1">
+                    <div class="usual comment-wrapper">
+                        <div class="usual full-wide">
+                           <img src="images/people-icon.png"
+                                 class="ava-icon">
+                            <br>
+                            <a href="">user</a>
+                            <span class="comment-header">13 апреля 2012,08:13</span>
+                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                        </div>
+                        <div class="usual ">
+                            <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET
                     </span>
-                </div>
-            </li>
-            <li id="comment-2">
-                <div class="">
-                    <img src="images/people-icon.png"
-                         class="ava-icon">
-                    <a href="">fdgdfg</a>
-                    <span>13 апреля 2012,08:13</span>
-                </div>
-                <div class="1"><span>Самая изысканная современная музыка
-
-                        -
-                        для тех, кто знает себе цену и готов получать от жизни еще больше.
-                    </span>
-                </div>
-                <ol>
-                    <li id="comment-3">
-                        <div class="">
+                        </div>
+                    </div>
+                </li>
+                <li id="comment-2">
+                    <div class="usual comment-wrapper">
+                        <div class="usual full-wide">
                             <img src="images/people-icon.png"
                                  class="ava-icon">
-                            <a href="">fsrs</a>
-                            <span>13 апреля 2012,08:13</span>
+                            <br>
+                            <a href="">fdgdfg</a>
+                            <span class="comment-header">13 апреля 2012,08:13</span>
+                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
                         </div>
-                        <div class=""><span>SSSSSSSSSS SSSSSSSSS SSSSSSSSSSSSSS</span>
+                        <div class="usual"><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET
+                    </span>
+                        </div>
+                    </div>
+                    <ol>
+                        <li id="comment-3">
+                            <div class="usual comment-wrapper">
+                                <div class="usual full-wide">
+                                    <img src="images/people-icon.png"
+                                         class="ava-icon">
+                                    <br>
+                                    <a href="">fsrs</a>
+                                    <span class="comment-header">13 апреля 2012,08:13</span>
+                                    <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                                </div>
+                                <div class="usual "><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
 
-                        </div>
-                    </li>
-                    <li id="comment-4">
-                        <div class="">
+                                </div>
+                            </div>
+                        </li>
+                        <li id="comment-4">
+                            <div class="usual comment-wrapper">
+                                <div class="usual full-wide">
+                                    <img src="images/people-icon.png"
+                                         class="ava-icon">
+                                    <br>
+                                    <a href="">fsrs</a>
+                                    <span class="comment-header">13 апреля 2012,08:13</span>
+                                    <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                                </div>
+                                <div class="usual "><span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
+
+                                </div>
+                            </div>
+                        </li>
+                    </ol>
+                </li>
+                <li id="comment-5">
+                    <div class="usual comment-wrapper">
+                        <div class="usual  full-wide">
                             <img src="images/people-icon.png"
                                  class="ava-icon">
+                            <br>
                             <a href="">fsrs</a>
-                            <span>13 апреля 2012,08:13</span>
+                            <span class="comment-header">13 апреля 2012,08:13</span>
+                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
                         </div>
-                        <div class=""><span>SSSSSSSSSS SSSSSSSSS SSSSSSSSSSSSSS</span>
-
+                        <div class="usual ">
+                            <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
                         </div>
-                    </li>
-                </ol>
-            </li>
-            <li id="comment-5">
-                <div class="">
-                    <img src="images/people-icon.png"
-                         class="ava-icon">
-                    <a href="">fsrs</a>
-                    <span>13 апреля 2012,08:13</span>
-                </div>
-                <div class="">
-                    <span>SSSSSSSSSS SSSSSSSSS SSSSSSSSSSSSSS</span>
-                </div>
-            </li>
-            <li id="comment-6">
-                <div class="">
-                    <img src="images/people-icon.png"
-                         class="ava-icon">
-                    <a href="">fsrs</a>
-                    <span>13 апреля 2012,08:13</span>
-                </div>
-                <div class="">
-                    <span>SSSSSSSSSS SSSSSSSSS SSSSSSSSSSSSSS</span>
-                </div>
-            </li>
-            <li id="comment-7">
-                <div class="">
-                    <img src="images/people-icon.png"
-                         class="ava-icon">
-                    <a href="">fsrs</a>
-                    <span>13 апреля 2012,08:13</span>
-                </div>
-                <div class="">
-                    <span>SSSSSSSSSS SSSSSSSSS SSSSSSSSSSSSSS</span>
-                </div>
-            </li>
-        </ol>
-
+                    </div>
+                </li>
+                <li id="comment-6">
+                    <div class="usual comment-wrapper">
+                        <div class="usual  full-wide">
+                            <img src="images/people-icon.png"
+                                 class="ava-icon">
+                            <br>
+                            <a href="">fsrs</a>
+                            <span class="comment-header">13 апреля 2012,08:13</span>
+                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                        </div>
+                        <div class="usual ">
+                            <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
+                        </div>
+                    </div>
+                </li>
+                <li id="comment-7">
+                    <div class="usual comment-wrapper last">
+                        <div class="usual  full-wide">
+                            <img src="images/people-icon.png"
+                                 class="ava-icon">
+                            <br>
+                            <a href="">fsrs</a>
+                            <span class="comment-header">13 апреля 2012,08:13</span>
+                            <div class="comment-control"><a href="">пожаловаться</a> | <input type="submit" value="ответить"></div>
+                        </div>
+                        <div class="usual">
+                            <span>Web Source Technology is an International Company which has recently opened a branch office in Dnepropetrovsk and is looking for AS3 С++,С#,.NET</span>
+                        </div>
+                    </div>
+                </li>
+            </ol>
+            <div style="height:1px;overflow:hidden;clear:both;"></div>
+        </div>
+        <div class="new-comment">
+            <textarea class="shadow-border" placeholder="submit a comment"></textarea>
+            <input type="submit" value="Post">
+        </div>
     </div>
-    <div style="height:1px;overflow:hidden;clear:both;">
-
-    </div>
+    <div style="height:1px;overflow:hidden;clear:both;"></div>
 </div>
 
 <div class="content-right-sidebar">
@@ -203,7 +238,7 @@
     </div>
     <div id="user-events"
          class="shadow-border">
-        <div class="user-events-caption"><span>Еще события Username</span></div>
+        <div class="user-events-caption"><span>Еще события </span><span class="user-name">Username</span></div>
         <div class="user-event-item">
             <img src="userimages/event-small0001.png">
 
@@ -262,6 +297,16 @@
     </div>
     <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
 </div>
+<div id="logged-menu" class="slide-menu user-menu">
+
+    <div class="">
+        <a>Настройки</a>
+    </div>
+    <div class="">
+        <a>Выход</a>
+    </div>
+
+</div>
 
 </div>
 <div class="footer">
@@ -297,6 +342,9 @@
             <li><a href="/">German</a></li>
         </ul>
     </div>
+</div>
+<div id="quest">
+
 </div>
 </div>
 </body>
