--- a/maket.html
+++ b/maket.html
@@ -8,8 +8,6 @@
           rel="stylesheet">
     <script src="js/jquery-1.8.0.min.js"
             type="text/javascript"></script>
-    <!--<script src="js/jquery.ui.datepicker-ru.js"
-            type="text/javascript"></script>-->
     <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
     <script src="js/from-quest.js"
@@ -25,7 +23,7 @@
     <div class="header">
         <div class="page-header">
             <div class="logo">
-                <a href="/"><img src="images/logo.png"></a>
+                <a href="/">Meet</a>
             </div>
             <div class="nav">
                 <div><a class=""
@@ -37,7 +35,7 @@
             <div class="login">
                 <div><a href="/">Sign Up</a></div>
                 <div class="border"></div>
-                <div><a href="/">Login In</a></div>
+                <div><a id="login" >Login In</a></div>
             </div>
 
         </div>
@@ -142,16 +140,16 @@
             <div style="height:1px;overflow:hidden;clear:both;"></div>
         </div>
         <div class="content-right-sidebar">
-            <div class="search-input">
+            <div class="usual search-input">
                 <input placeholder="search"
                        type="text"
-                       class="search-text">
+                       class="usual search-text">
                 <input type="submit"
                        name="search"
                        class="search-submit"
                        value="">
             </div>
-            <div class="filter">
+            <div class="usual filter">
                 <div class="filter-caption"><h2>Фильтровать&nbsp;события</h2></div>
                 <!--<div class="filter-date"></div>
                <div class="filter-location"></div>
@@ -188,7 +186,22 @@
             </div>
 
         </div>
-
+        <div id="login-window" class="slide-menu">
+            <form>
+                <div>
+                    <span>Username :</span>
+                    <input type="text">
+                </div>
+                <div>
+                    <span>Password (</span><a href="">Forgot?</a><span>):</span>
+                    <input type="text">
+                </div>
+                <div>
+                    <input type="checkbox"><span>Keep me logged in</span>
+                    <input type="submit">
+                </div>
+            </form>
+        </div>
     </div>
     <div class="footer">
         <div class="footer-menu">
