--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,8 @@
             type="text/javascript"></script>
     <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
+    <script src="js/from-quest.js"
+            type="text/javascript"></script>
     <link type="text/css"
           rel="stylesheet"
           media="all"
@@ -20,7 +22,7 @@
     <div class="header">
         <div class="page-header">
             <div class="logo">
-                <a href="/"><img src="images/logo.png"></a>
+                <a href="/">Meet</a>
             </div>
             <div class="nav">
                 <div class="menu-active"><a class=""
@@ -34,8 +36,8 @@
                 <div class="border"></div>
                 <div><a href="/">Profile</a></div>
             </div>
-            <div class="login">
-                <a href="/"><img src="images/user-icon.png">Username</a>
+            <div id="username" class="login">
+                <a ><img src="images/user-icon.png">Username</a>
             </div>
 
         </div>
@@ -159,7 +161,16 @@
             </div>
             <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
         </div>
+        <div id="logged-menu" class="slide-menu user-menu">
 
+            <div class="">
+                <a>Настройки</a>
+            </div>
+            <div class="">
+                <a>Выход</a>
+            </div>
+
+        </div>
     </div>
     <div class="footer">
         <div class="footer-menu">
