--- a/draft_01_main.html
+++ b/draft_01_main.html
@@ -62,49 +62,43 @@
         <div class="content-page full-wide">
 
 
-            <div class="main-content-block shadow-border">
+            <div class="main-content-block usual shadow-border">
                 <div class="main-content-block-header">
-                    <hr>
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
-            <div class="main-content-block shadow-border">
+            <div class="main-content-block usual shadow-border">
                 <div class="main-content-block-header">
-                    <hr>
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
-            <div class="main-content-block shadow-border last-in-row">
+            <div class="main-content-block usual shadow-border last-in-row">
                 <div class="main-content-block-header">
-                    <hr>
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
-            <div class="main-content-block shadow-border">
+            <div class="main-content-block usual shadow-border">
                 <div class="main-content-block-header">
-                    <hr>
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
-            <div class="main-content-block shadow-border">
+            <div class="main-content-block usual shadow-border">
                 <div class="main-content-block-header">
-                    <hr>
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
                 <div class="main-content-block-footer"><span>Print design</span></div>
             </div>
-            <div class="main-content-block shadow-border last-in-row">
+            <div class="main-content-block usual shadow-border last-in-row">
                 <div class="main-content-block-header">
-                    <hr>
                     <span>Symbol collection</span>
                 </div>
                 <div class="main-content-block-image"><img src="userimages/main-img001.png"></div>
