--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -65,7 +65,7 @@
                            value="">
                 </div>
             </div>
-            <div class="usual margin-b5 shadow-border ">
+            <div class="usual margin-b5 shadow-border">
                 <div class="activity-event-item usual">
                     <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
@@ -125,8 +125,9 @@
                     <span>За вчера, 31 мая 2012</span>
                 </div>
             </div>
-            <div class="hr usual"></div>
+
             <div class="usual margin-b5  shadow-border ">
+                <!--<div class="hr usual"></div>-->
                 <div class="activity-event-item usual">
                     <div class="event-item-image usual"><img src="userimages/event-small0002.png"></div>
 
